kube/ab-testing/istio/base/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: backend
  namespace: demo
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: monitor
  namespace: demo
spec:
  host: monitor
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
